2007-12-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-use-idna): Don't directly refer to the value of
	idna-program in order to suppress byte compile warning issued by XEmacs
	that came to byte compile the default value section of defcustom forms
	recently.

	* gnus-start.el (gnus-site-init-file): Don't directly refer to the
	value of installation-directory.

	* message.el (message-use-idna): Don't directly refer to the value of
	idna-program.

	* mm-uu.el (mm-uu-hide-markers): Don't directly call defined-colors.

	* smiley.el (smiley-style): Don't directly call face-attribute.

2007-12-04  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-group.el (gnus-group-highlight-line): Add FIXME.

	* gnus-dired.el: Reduce Gnus dependencies.
	(gnus-ems, gnus-msg, gnus-util, message, mm-decode, mml): Don't
	require.  Use autoloads instead.
	(mml-attach-file, mm-default-file-encoding, mailcap-extension-to-mime)
	(mailcap-mime-info, mm-mailcap-command, ps-print-preprint)
	(message-buffers, gnus-setup-message, gnus-print-buffer): Autoload.
	(gnus-dired-mode): Adjust doc string.
	(gnus-dired-mail-mode): New variable.
	(gnus-dired-mode-map): Avoid using `gnus-define-keys'.
	(gnus-dired-mode): Avoid using `gnus-run-hooks'.
	(gnus-dired-mail-buffers): New function.  Return mail or message
	composition buffers.
	(gnus-dired-attach): Use it.
	(gnus-dired-find-file-mailcap): Call `mailcap-mime-info' with
	NO-DECODE.
	(gnus-dired-print): Use `gnus-print-buffer' depending on
	`gnus-dired-mail-mode'.

2007-12-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* rfc2047.el (rfc2047-encoded-word-regexp)
	(rfc2047-encoded-word-regexp-loose): Move forward; add comments
	explaining what regexp patterns are for.

2007-12-03  Reiner Steib  <Reiner.Steib@gmx.de>

	* mailcap.el: Reduce dependencies.
	(mail-header-parse-content-type): Autoload.
	(mailcap-delete-duplicates): New alias.
	(mailcap-mime-info): Add optional argument NO-DECODE.
	(mailcap-mime-types): Use mailcap-delete-duplicates.
